--- a/views/blocks/header.ejs
+++ b/views/blocks/header.ejs
@@ -1,17 +1,14 @@
-
-
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-<div class="container-fluid">
-
-
-<div>
-<ul class="navbar-nav">
-	<li><a class="nav-item nav-link" href='/'>Home</a></li>
-	<li ><a class="nav-item nav-link" href='/register'>Register</a></li>
-	<li><a class="nav-item nav-link"  href='/add'>Add Item</a></li>
-	<li><a class="nav-item nav-link"  href='/check'>Check Item</a></li>
-	<li><a class="nav-item nav-link"  href='/logout'>Log out</a></li>
-</ul>
-</div>
-</div>
-</nav>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+                <div>
+                    <ul class="navbar-nav">
+                        <li><a class="nav-item nav-link" href='/'>Home</a></li>
+                        <li><a class="nav-item nav-link" href='/register'>Register</a></li>
+                        <li><a class="nav-item nav-link" href='/add'>Add Item</a></li>
+                        <li><a class="nav-item nav-link" href='/check'>Check Item</a></li>
+                        <li><a class="nav-item nav-link" href='/login'>Log in</a></li>
+                        <li><a class="nav-item nav-link" href='/logout'>Log out</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
