--- a/views/searchResult.ejs
+++ b/views/searchResult.ejs
@@ -14,6 +14,62 @@
     </script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous">
     </script>
+    <style>
+        th {
+      cursor: pointer;
+    }
+  </style>
+    <script>
+       $(document).ready(function() {
+    var sorted = true;
+    $('#grid').click(function(e) {
+        sorted = !sorted;
+        var grid = $('#grid');
+        if (e.target.tagName != 'TH') return;
+        sortGrid(e.target.cellIndex, e.target.getAttribute('data-type'), sorted);
+    });
+
+    function sortGrid(colNum, type) {
+        var tbody = grid.getElementsByTagName('tbody')[0];
+        var rowsArray = [].slice.call(tbody.rows);
+        var compare;
+        switch (type) {
+            case 'number':
+                compare = function(rowA, rowB) {
+                    if (sorted)
+                        return rowA.cells[colNum].innerHTML - rowB.cells[colNum].innerHTML;
+                    else
+                        return rowB.cells[colNum].innerHTML - rowA.cells[colNum].innerHTML;
+                };
+                break;
+            case 'string':
+                compare = function(rowA, rowB) {
+                    if (sorted){
+                        if (rowA.cells[colNum].innerHTML.toLowerCase() > rowB.cells[colNum].innerHTML.toLowerCase())
+                            return -1;
+                        else
+                            return 1;
+                    }
+                    else{
+                        if (rowA.cells[colNum].innerHTML.toLowerCase() < rowB.cells[colNum].innerHTML.toLowerCase())
+                            return -1;
+                        else
+                            return 1;
+                    }
+                };
+                break;
+        }
+        rowsArray.sort(compare);
+        grid.removeChild(tbody);
+        for (var i = 0; i < rowsArray.length; i++) {
+            tbody.appendChild(rowsArray[i]);
+        }
+        grid.appendChild(tbody);
+
+    }
+});
+
+  </script>
 </head>
 
 <body>
@@ -32,15 +88,15 @@
     </form>
     <div id="searchResults">
         <div class="container-fluid table-responsive" style="margin-top: 20px">
-            <table class="table table-hover table-striped">
+            <table id="grid" class="table table-hover table-striped">
                 <thead class=" thead-dark">
                     <tr>
-                        <th>#</th>
-                        <th>Product name</th>
-                        <th>Price</th>
-                        <th>Shop</th>
+                        <th data-type="number" >#  <i class="fa fa-sort"></i></th>
+                        <th data-type="string" >Product name  <i class="fa fa-sort"></th>
+                        <th data-type="number" >Price  <i class="fa fa-sort"></th>
+                        <th data-type="string" >Shop  <i class="fa fa-sort"></th>
                         <th>Time added</th>
-                        <th>Category</th>
+                        <th data-type="string" >Category  <i class="fa fa-sort"></th>
                         <th>Comment</th>
                         <th>Edit</th>
                         <th>Delete</th>
@@ -49,34 +105,34 @@
                 <tbody>
                     <% if (items.length<1 ) { %>
                     <tr>
-                        <th>Nothing to show</th>
+                        <td>Nothing to show</th>
                     </tr>
                     <% } else { %>
                     <% for (i=0;i < items.length; i++ ) { %>
                     <tr>
-                        <th>
-                            <%= i+1 %>
-                        </th>
-                        <th>
+                        <td>
+                            <%=i+1%>
+                        </td>
+                        <td>
                             <%= items[i].name %>
-                        </th>
-                        <th>
+                        </td>
+                        <td>
                             <%= items[i].price %>
-                        </th>
-                        <th>
+                        </td>
+                        <td>
                             <%= items[i].shop %>
-                        </th>
-                        <th>
+                        </td>
+                        <td>
                             <%= items[i].time %>
-                        </th>
-                        <th>
+                        </td>
+                        <td>
                             <%= items[i].category %>
-                        </th>
-                        <th>
+                        </td>
+                        <td>
                             <%= items[i].comment %>
-                        </th>
-                        <th><a href=<%='/editPost/' +items[i]._id %>><span class="fa fa-edit"></span></a></th>
-                        <th><a href=<%='/deletePost/' +items[i]._id %>><span class="fa fa-trash"></span></a></th>
+                        </td>
+                        <td><a href=<%='/editPost/' +items[i]._id %>><span class="fa fa-edit"></span></a></td>
+                        <td><a href=<%='/deletePost/' +items[i]._id %>><span class="fa fa-trash"></span></a></td>
                     </tr>
                     <% } %>
                     <% } %>
