--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,7 +17,23 @@
 
 <body>
     <div>
-        <% include blocks/header.ejs %>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+                <div>
+                    <ul class="navbar-nav">
+                        <li><a class="nav-item nav-link" href='/'>Home</a></li>
+                        <li><a class="nav-item nav-link" href='/add'>Add Item</a></li>
+                        <li><a class="nav-item nav-link" href='/check'>Check Item</a></li>
+                        <% if (authorised) {%>
+                        <li><a class="nav-item nav-link" href='/logout'>Log out</a></li>
+                        <% } else { %>
+                        <li><a class="nav-item nav-link" href='/login'>Log in</a></li>
+                        <li><a class="nav-item nav-link" href='/register'>Register</a></li>
+                        <% } %>
+                    </ul>
+                </div>
+            </div>
+        </nav>
     </div>
     <div style="padding: 30px; width:25%"><br>
         <h1>Best Buy</h1> <br>
