--- a/views/register.ejs
+++ b/views/register.ejs
@@ -32,7 +32,23 @@
 
 <body>
 <div>
-    <% include blocks/header.ejs %>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+                <div>
+                    <ul class="navbar-nav">
+                        <li><a class="nav-item nav-link" href='/'>Home</a></li>
+                        <li><a class="nav-item nav-link" href='/add'>Add Item</a></li>
+                        <li><a class="nav-item nav-link" href='/check'>Check Item</a></li>
+                        <% if (authorised) {%>
+                        <li><a class="nav-item nav-link" href='/logout'>Log out</a></li>
+                        <% } else { %>
+                        <li><a class="nav-item nav-link" href='/login'>Log in</a></li>
+                        <li><a class="nav-item nav-link" href='/register'>Register</a></li>
+                        <% } %>
+                    </ul>
+                </div>
+            </div>
+        </nav>
 </div>
           <% if (message.length > 0) { %>
     <br>
