--- a/views/check.ejs
+++ b/views/check.ejs
@@ -2,17 +2,87 @@
 <html>
 
 <head>
-    <title>Log in</title>
+    <title>Check Item</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" type="text/css" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous">
-    </script>
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"> </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous">
     </script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous">
+    </script>
+    <style>
+        th {
+            cursor: pointer;
+        }
+  </style>
+    <script type="text/javascript">
+    $(document).ready(function() {
+        $.get('auth', function(data) {
+            if (data.username != 'guest')
+                $('#header').html("<li><a class='nav-item nav-link' href='/'>Home</a></li><li><a class='nav-item nav-link' href='/add'>Add Item</a></li><li><a class='nav-item nav-link' href='/check'>Check Item</a></li><li><a class='nav-item nav-link' href='/logout'>Sign out <i class='fa fa-sign-out'></i></a></li>");
+            else
+                $('#header').html("<li><a class='nav-item nav-link' href='/'>Home</a></li><li><a class='nav-item nav-link' href='/register'>Register</a></li> <li> <a class='nav-item nav-link' href='/login'>Sign in <i class='fa fa-sign-in'></i></a></li>");
+        });
+        $("#keyword").keyup(function() {
+            var input = 'checking/' + $(this).val();
+            $.get(input, function(data) {
+                $('#searchResult').html('');
+                var i = 1;
+                $.each(data, function() {
+                    var row = "<tr><td>" + i + "</td><td>" + (this).name + "</td><td>" + (this).price + "</td><td>" + (this).shop + "</td><td>" + (this).time + "</td><td>" + (this).category + "</td><td>" + (this).comment + "</td><td><a href=/editPost/" + (this)._id + "><span class='fa fa-edit'></span></a></td><td><a href=/deletePost/" + (this)._id + "><span class='fa fa-trash'></span></a></td></tr>"
+                    i++;
+                    $('#searchResult').append(row);
+                });
+            });
+        });
+        var sorted = true;
+        $('#grid').click(function(e) {
+            sorted = !sorted;
+            var grid = $('#grid');
+            if (e.target.tagName != 'TH') return;
+            sortGrid(e.target.cellIndex, e.target.getAttribute('data-type'), sorted);
+        });
+
+        function sortGrid(colNum, type) {
+            var tbody = grid.getElementsByTagName('tbody')[0];
+            var rowsArray = [].slice.call(tbody.rows);
+            var compare;
+            switch (type) {
+                case 'number':
+                    compare = function(rowA, rowB) {
+                        if (sorted)
+                            return rowA.cells[colNum].innerHTML - rowB.cells[colNum].innerHTML;
+                        else
+                            return rowB.cells[colNum].innerHTML - rowA.cells[colNum].innerHTML;
+                    };
+                    break;
+                case 'string':
+                    compare = function(rowA, rowB) {
+                        if (sorted) {
+                            if (rowA.cells[colNum].innerHTML.toLowerCase() > rowB.cells[colNum].innerHTML.toLowerCase())
+                                return -1;
+                            else
+                                return 1;
+                        } else {
+                            if (rowA.cells[colNum].innerHTML.toLowerCase() < rowB.cells[colNum].innerHTML.toLowerCase())
+                                return -1;
+                            else
+                                return 1;
+                        }
+                    };
+                    break;
+            }
+            rowsArray.sort(compare);
+            grid.removeChild(tbody);
+            for (var i = 0; i < rowsArray.length; i++) {
+                tbody.appendChild(rowsArray[i]);
+            }
+            grid.appendChild(tbody);
+
+        }
+    });
     </script>
 </head>
 
@@ -20,33 +90,32 @@
     <div>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-                <div>
-                    <ul class="navbar-nav">
-                        <li><a class="nav-item nav-link" href='/'>Home</a></li>
-                        <li><a class="nav-item nav-link" href='/add'>Add Item</a></li>
-                        <li><a class="nav-item nav-link" href='/check'>Check Item</a></li>
-                        <% if (authorised) {%>
-                        <li><a class="nav-item nav-link" href='/logout'>Log out</a></li>
-                        <% } else { %>
-                        <li><a class="nav-item nav-link" href='/login'>Log in</a></li>
-                        <li><a class="nav-item nav-link" href='/register'>Register</a></li>
-                        <% } %>
-                    </ul>
-                </div>
+                <ul class="navbar-nav" id="header"></ul>
             </div>
         </nav>
     </div>
     <div style="padding-left: 30px; width:25%"><br>
         <h1>Check Item</h1> <br>
     </div>
-    <form name="searchRequest" method="POST">
-        <div style="padding-left: 30px; width:60%" class="row">
-            <div class="col-md-3"><label>I`m looking for</label></div>
-            <div class="col-md-4"><input class="form-control" type="text" name="keyword"></div>
-            <div class="col-md-3"><button id="search" type="submit" class="btn btn-info">Search</button></div>
-        </div>
-    </form>
-   
+    <div class="col-md-4"><input class="form-control" type="text" id="keyword" name="keyword"></div>
+    <div class="container-fluid table-responsive" style="margin-top: 20px">
+        <table id="grid" class="table table-hover table-striped">
+            <thead class=" thead-dark">
+                <tr>
+                    <th data-type="number"># <i class="fa fa-sort"></i></th>
+                    <th data-type="string">Product name <i class="fa fa-sort"></th>
+                    <th data-type="number">Price <i class="fa fa-sort"></th>
+                    <th data-type="string">Shop <i class="fa fa-sort"></th>
+                    <th>Time added</th>
+                    <th data-type="string">Category <i class="fa fa-sort"></th>
+                    <th>Comment</th>
+                    <th>Edit</th>
+                    <th>Delete</th>
+                </tr>
+            </thead>
+            <tbody id="searchResult">
+            </tbody>
+    </div>
 </body>
 
 </html>
