--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,16 +2,25 @@
 <html>
 
 <head>
-    <title>Log in</title>
+    <title>Best buy</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" type="text/css" rel="stylesheet">
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous">
-    </script>
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"> </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous">
     </script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous">
+    </script>
+    <script type="text/javascript">
+    $(document).ready(function() {
+        $.get('auth', function(data) {
+            if (data.username != 'guest')
+                $('#header').html("<li><a class='nav-item nav-link' href='/'>Home</a></li><li><a class='nav-item nav-link' href='/add'>Add Item</a></li><li><a class='nav-item nav-link' href='/check'>Check Item</a></li><li><a class='nav-item nav-link' href='/logout'>Sign out <i class='fa fa-sign-out'></i></a></li>");
+            else
+                $('#header').html("<li><a class='nav-item nav-link' href='/'>Home</a></li><li><a class='nav-item nav-link' href='/register'>Register</a></li> <li> <a class='nav-item nav-link' href='/login'>Sign in <i class='fa fa-sign-in'></i></a></li>");
+        });
+    });
     </script>
 </head>
 
@@ -19,19 +28,7 @@
     <div>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-                <div>
-                    <ul class="navbar-nav">
-                        <li><a class="nav-item nav-link" href='/'>Home</a></li>
-                        <li><a class="nav-item nav-link" href='/add'>Add Item</a></li>
-                        <li><a class="nav-item nav-link" href='/check'>Check Item</a></li>
-                        <% if (authorised) {%>
-                        <li><a class="nav-item nav-link" href='/logout'>Log out</a></li>
-                        <% } else { %>
-                        <li><a class="nav-item nav-link" href='/login'>Log in</a></li>
-                        <li><a class="nav-item nav-link" href='/register'>Register</a></li>
-                        <% } %>
-                    </ul>
-                </div>
+                <ul class="navbar-nav" id="header"></ul>
             </div>
         </nav>
     </div>
@@ -49,7 +46,9 @@
             <button style="padding: 30px" class="btn btn-info btn-lg" onclick="window.location.href = '/check';"> Check item</button>
         </div>
     </div>
-    <div><p>registered users only</p></div>
+    <div>
+        <p>registered users only</p>
+    </div>
 </body>
 
 </html>
