--- a/views/register.ejs
+++ b/views/register.ejs
@@ -7,53 +7,51 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" type="text/css" rel="stylesheet">
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"> </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script>
-        $( document ).ready(function() {
-            $('#s-h-pass').click(function(){
-                var type = $('#password').attr('type') == "text" ? "password" : 'text';
-                var c = $(this).html() == "<span class=\"fa fa-eye-slash input-group-text\" title=\"Скрыть пароль\"></span>" ? "<span class=\"fa fa-eye input-group-text\" title=\"Показать пароль\"></span>" : "<span class=\"fa fa-eye-slash input-group-text\" title=\"Скрыть пароль\"></span>";
-                $(this).html(c);
-                $('#password').prop('type', type);
-   
-            });
-            $('#s-h-pass2').click(function(){
-                var type = $('#password2').attr('type') == "text" ? "password" : 'text';
-                var c = $(this).html() == "<span class=\"fa fa-eye-slash input-group-text\" title=\"Скрыть пароль\"></span>" ? "<span class=\"fa fa-eye input-group-text\" title=\"Показать пароль\"></span>" : "<span class=\"fa fa-eye-slash input-group-text\" title=\"Скрыть пароль\"></span>";
-                $(this).html(c);
-                $('#password2').prop('type', type);
-   
-            });
+    $(document).ready(function() {
+        $.get('auth', function(data) {
+            if (data.username != 'guest')
+                $('#header').html("<li><a class='nav-item nav-link' href='/'>Home</a></li><li><a class='nav-item nav-link' href='/add'>Add Item</a></li><li><a class='nav-item nav-link' href='/check'>Check Item</a></li><li><a class='nav-item nav-link' href='/logout'>Sign out <i class='fa fa-sign-out'></i></a></li>");
+            else
+                $('#header').html("<li><a class='nav-item nav-link' href='/'>Home</a></li><li><a class='nav-item nav-link' href='/register'>Register</a></li> <li> <a class='nav-item nav-link' href='/login'>Sign in <i class='fa fa-sign-in'></i></a></li>");
         });
+        $('#s-h-pass').click(function() {
+            var type = $('#password').attr('type') == "text" ? "password" : 'text';
+            var c = $(this).html() == "<span class=\"fa fa-eye-slash input-group-text\" title=\"Скрыть пароль\"></span>" ? "<span class=\"fa fa-eye input-group-text\" title=\"Показать пароль\"></span>" : "<span class=\"fa fa-eye-slash input-group-text\" title=\"Скрыть пароль\"></span>";
+            $(this).html(c);
+            $('#password').prop('type', type);
+
+        });
+        $('#s-h-pass2').click(function() {
+            var type = $('#password2').attr('type') == "text" ? "password" : 'text';
+            var c = $(this).html() == "<span class=\"fa fa-eye-slash input-group-text\" title=\"Скрыть пароль\"></span>" ? "<span class=\"fa fa-eye input-group-text\" title=\"Показать пароль\"></span>" : "<span class=\"fa fa-eye-slash input-group-text\" title=\"Скрыть пароль\"></span>";
+            $(this).html(c);
+            $('#password2').prop('type', type);
+
+        });
+    });
     </script>
 </head>
 
 <body>
-<div>
+    <div>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-                <div>
-                    <ul class="navbar-nav">
-                        <li><a class="nav-item nav-link" href='/'>Home</a></li>
-                        <li><a class="nav-item nav-link" href='/add'>Add Item</a></li>
-                        <li><a class="nav-item nav-link" href='/check'>Check Item</a></li>
-                        <% if (authorised) {%>
-                        <li><a class="nav-item nav-link" href='/logout'>Log out</a></li>
-                        <% } else { %>
-                        <li><a class="nav-item nav-link" href='/login'>Log in</a></li>
-                        <li><a class="nav-item nav-link" href='/register'>Register</a></li>
-                        <% } %>
-                    </ul>
-                </div>
+                <ul class="navbar-nav" id="header"></ul>
             </div>
         </nav>
-</div>
-          <% if (message.length > 0) { %>
+    </div>
+    <% if (message.length > 0) { %>
     <br>
-   <div style="padding-left: 30px; width:35%" ><div class="alert alert-danger"><%= message %></div></div>
- <% } %>
+    <div style="padding-left: 30px; width:35%">
+        <div class="alert alert-danger">
+            <%= message %>
+        </div>
+    </div>
+    <% } %>
     <div style="padding: 30px; width:35%">
         <h1>Register form</h1><br>
     </div>
